[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/ActionSelector/ActionButtons.gd" type="Script" id=1]
[ext_resource path="res://ui/XYPlot/XYPlot.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/ActionSelector/ContinueButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://theme.tres" type="Theme" id=4]
[ext_resource path="res://ui/ButtonSoundPlayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://sound/ui/button_hover2.wav" type="AudioStream" id=7]

[node name="ActionButtons" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 287.0
margin_right = -320.0
margin_bottom = 1.0
theme = ExtResource( 4 )
theme_type_variation = "YouPanel"
script = ExtResource( 1 )

[node name="TopRow" type="HBoxContainer" parent="."]
unique_name_in_owner = true
margin_right = 320.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="Padding" type="Control" parent="TopRow"]
margin_right = 135.0
margin_bottom = 11.0
rect_min_size = Vector2( 135, 0 )

[node name="Panel" type="Control" parent="TopRow"]
margin_left = 136.0
margin_right = 186.0
margin_bottom = 11.0
rect_min_size = Vector2( 50, 10 )

[node name="TopRowDataContainer" type="HBoxContainer" parent="TopRow/Panel"]
unique_name_in_owner = true
margin_left = -1.5
margin_top = -50.0
margin_right = 49.5
margin_bottom = 12.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3

[node name="DataContainer" type="HBoxContainer" parent="TopRow/Panel/TopRowDataContainer"]
unique_name_in_owner = true
margin_bottom = 62.0
mouse_filter = 2

[node name="DI" parent="TopRow/Panel/TopRowDataContainer" instance=ExtResource( 2 )]
unique_name_in_owner = true
modulate = Color( 0.396078, 0.901961, 1, 1 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_right = 51.0
margin_bottom = 62.0
size_flags_horizontal = 1

[node name="Padding2" type="Control" parent="TopRow"]
margin_left = 187.0
margin_right = 301.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="YouLabel" type="Label" parent="TopRow"]
unique_name_in_owner = true
margin_left = 302.0
margin_right = 320.0
margin_bottom = 11.0
text = "You"

[node name="BottomRow" type="HBoxContainer" parent="."]
unique_name_in_owner = true
margin_top = 12.0
margin_right = 320.0
margin_bottom = 74.0
size_flags_horizontal = 15
size_flags_vertical = 13
theme = ExtResource( 4 )
alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="BottomRow"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 280.0
margin_right = 320.0
margin_bottom = 62.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="CategoryContainer" type="HBoxContainer" parent="BottomRow/PanelContainer"]
unique_name_in_owner = true
margin_left = 1.0
margin_top = 1.0
margin_right = 39.0
margin_bottom = 61.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -1
alignment = 2

[node name="TurnButtons" type="VBoxContainer" parent="BottomRow/PanelContainer/CategoryContainer"]
unique_name_in_owner = true
margin_right = 38.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SelectButton" type="Button" parent="BottomRow/PanelContainer/CategoryContainer/TurnButtons"]
unique_name_in_owner = true
margin_right = 38.0
margin_bottom = 29.0
hint_tooltip = "Submit the selected action and end your turn."
mouse_default_cursor_shape = 2
size_flags_vertical = 3
theme = ExtResource( 4 )
theme_type_variation = "SelectButton"
text = "Lock In"

[node name="ReverseButton" type="CheckButton" parent="BottomRow/PanelContainer/CategoryContainer/TurnButtons"]
unique_name_in_owner = true
visible = false
margin_top = 20.0
margin_right = 38.0
margin_bottom = 39.0
hint_tooltip = "Perform your action backwards."
size_flags_horizontal = 3
size_flags_vertical = 3
action_mode = 0
text = "Flip"
align = 1
icon_align = 1
expand_icon = true

[node name="ContinueButton" parent="BottomRow/PanelContainer/CategoryContainer/TurnButtons" instance=ExtResource( 3 )]
visible = false
margin_top = 20.0
margin_right = 38.0
margin_bottom = 39.0

[node name="UndoButton" type="Button" parent="BottomRow/PanelContainer/CategoryContainer/TurnButtons"]
unique_name_in_owner = true
margin_top = 30.0
margin_right = 38.0
margin_bottom = 60.0
hint_tooltip = "Resimulate the match until the previous turn."
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Undo"

[node name="AutoButton" type="CheckButton" parent="BottomRow/PanelContainer/CategoryContainer/TurnButtons"]
unique_name_in_owner = true
visible = false
margin_top = 45.0
margin_right = 38.0
margin_bottom = 60.0
size_flags_vertical = 3
action_mode = 0
text = "Auto"
clip_text = true
align = 2

[node name="ButtonSoundPlayer" parent="." instance=ExtResource( 5 )]
unique_name_in_owner = true
button_containers = [  ]
hover_sound = ExtResource( 7 )

[node name="ButtonSoundPlayer2" parent="." instance=ExtResource( 5 )]
unique_name_in_owner = true
button_containers = [ NodePath("../BottomRow/PanelContainer/CategoryContainer/TurnButtons") ]
